# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: lintest.yaml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: 404.html  analyze.html  show_urls.html  start.html  watch_url.html
